De-parameterize HttpDecodedResponse and fixed unit tests.