@@ -59,6 +59,7 @@
       --add-opens com.generic.core/com.generic.core.implementation.http.serializer=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.implementation.util=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.models=ALL-UNNAMED
+      --add-opens com.generic.core/com.generic.core.shared=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.util=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.util.configuration=ALL-UNNAMED
       --add-opens com.generic.core/com.generic.core.util.serializer=ALL-UNNAMED
